--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "date-fns": "^4.1.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.542.0",
-    "next": "15.5.2",
+    "next": "^16.0.10",
     "react": "19.1.0",
     "react-datepicker": "^8.7.0",
     "react-dom": "19.1.0",
